@@ -3,6 +3,7 @@ PHORONIX TEST SUITE CHANGE-LOG
 Phoronix Test Suite (Git)
 
 pts-core: Show unit/scale in CSV export
+pts-core: When limiting results to show in result viewer, keep child objects that match the desired type for the parent
 linux_perf: Reporting many more events
 pts-core: External dependency updates
 pts_Graph: graph code tweaks
